# beautiful-shell

./: .gitignore  README.md  install.sh
.github/workflows/: release.yml
beautiful_shell/: shellrc
beautiful_shell/beautiful_prompt/: .gitignore  CMakeLists.txt  Makefile  base.hpp  beautiful_prompt.hpp  cmd.hpp  colors.hpp  config.hpp  cwd.hpp  devtools.hpp  laptop.hpp  main.cpp  prompt_sym.hpp  status.hpp  system.hpp  terminal.cpp  terminal.hpp
beautiful_shell/beautiful_prompt/c/: Makefile  argparser.h  beautiful_prompt.c  beautiful_prompt.h  colors.h  laptop.hpp  terminal.hpp  test.c
beautiful_shell/scripts/: 00_path  01_ps1  10_ssh-agent  20_history  30_devtools  colors  config  devtools  initialize  messages  ps1-multiline  system  timer
beautiful_shell/scripts/sh/: multiline  ps1-colors
beautiful_shell/scripts/zsh/: multiline  ps1-colors
src/: shellrc
src/beautiful_shell/: .gitignore  CMakeLists.txt  base.hpp  beautiful_shell.hpp  cmd.hpp  colors.hpp  devtools.hpp  laptop.hpp  main.cpp  status.hpp  system.hpp
src/scripts/: 02_aliases  20_history  initialize  messages
